--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -59,6 +59,7 @@ jobs:
         run: |
           cd friendlywrt-rk3328/friendlywrt/package
           git clone https://github.com/frainzy1477/luci-app-clash
+          sed -i 's/SUBMENU:=2. Clash/SUBMENU:=3. Applications/' luci-app-clash/Makefile
           git clone https://github.com/rufengsuixing/luci-app-adguardhome
 
           git clone https://github.com/fw876/helloworld
@@ -80,13 +81,13 @@ jobs:
         run: |
           cd friendlywrt-rk3328/friendlywrt/package/base-files/files
           mkdir -p etc/clash
-          wget -qO- https://github.com/Dreamacro/clash/releases/download/v0.19.0/clash-linux-armv8-v0.19.0.gz | gunzip -c > etc/clash/clash
-
+          wget -qO- https://github.com/Dreamacro/clash/releases/download/v0.20.0/clash-linux-armv8-v0.20.0.gz | gunzip -c > etc/clash/clash
+          chmod +x etc/clash/clash
           mkdir -p etc/openclash/core
           cp etc/clash/clash etc/openclash/core/
 
           mkdir -p usr/share/clash
-          echo 0.19.0 > usr/share/clash/core_version
+          echo 0.20.0 > usr/share/clash/core_version
 
       - name: Update Target.mk
         run: |
