--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -71,7 +71,7 @@ jobs:
           rm -rf lean/luci-theme-argon
           git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
 
-          git clone https://github.com/vernesong/OpenClash
+          git clone https://github.com/0saga0/OpenClash
           mv OpenClash/luci-app-openclash/ .
           rm -rf OpenClash/
           
