--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -54,6 +54,7 @@ jobs:
           cp -r ../lede/package/lean package/
           sed -i 's/^src-git luci.*/src-git luci https:\/\/github.com\/coolsnowwolf\/luci/' feeds.conf.default
           sed -i 's/^src-git packages.*/src-git packages https:\/\/github.com\/coolsnowwolf\/packages/' feeds.conf.default
+          echo 'src-git node https://github.com/nxhack/openwrt-node-packages.git' >> feeds.conf.default
 
       - name: Install Extra Packages
         run: |
@@ -113,7 +114,7 @@ jobs:
         run: |		
           cd friendlywrt-rk3328/friendlywrt		
           ./scripts/feeds update -a		
-          ./scripts/feeds install -a
+          ./scripts/feeds install -a -p node
 
       - name: Install Mods
         run: |
