Update NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml

--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -114,7 +114,7 @@ jobs:
         run: |		
           cd friendlywrt-rk3328/friendlywrt		
           ./scripts/feeds update -a		
-          ./scripts/feeds install -a -p node
+          ./scripts/feeds install -a
 
       - name: Install Mods
         run: |
