--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -63,9 +63,8 @@ jobs:
 
           git clone https://github.com/rufengsuixing/luci-app-adguardhome
 
-          git clone https://github.com/fw876/helloworld
-          mv helloworld/* .
-          rm -rf helloworld/
+          git clone https://github.com/jerrykuku/lua-maxminddb.git
+          git clone https://github.com/jerrykuku/luci-app-vssr.git
 
           rm -rf lean/luci-theme-argon
           git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
