Update NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml

--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -118,6 +118,9 @@ jobs:
 
           rm -rf friendlywrt/feeds/packages/libs/libcap
           svn co https://github.com/openwrt/packages/trunk/libs/libcap friendlywrt/feeds/packages/libs/libcap
+          
+          rm -rf friendlywrt/package/feeds/packages/netdata
+          svn co https://github.com/openwrt/packages/trunk/admin/netdata friendlywrt/package/feeds/packages/netdata
 
           rm -rf friendlywrt/feeds/packages/libs/libnatpmp
           svn co https://github.com/coolsnowwolf/packages/trunk/libs/libnatpmp friendlywrt/feeds/packages/libs/libnatpmp
