Update NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml

--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -114,37 +114,37 @@ jobs:
 
       - name: Install Mods
         run: |
-          cd code
+          cd code/friendlywrt
 
-          rm -rf friendlywrt/feeds/packages/libs/libcap
-          svn co https://github.com/openwrt/packages/trunk/libs/libcap friendlywrt/feeds/packages/libs/libcap
+          rm -rf feeds/packages/libs/libcap
+          svn co https://github.com/openwrt/packages/trunk/libs/libcap feeds/packages/libs/libcap
           
-          rm -rf friendlywrt/package/feeds/packages/netdata
-          svn co https://github.com/openwrt/packages/trunk/admin/netdata friendlywrt/package/feeds/packages/netdata
+          rm -rf package/feeds/packages/netdata
+          svn co https://github.com/openwrt/packages/trunk/admin/netdata package/feeds/packages/netdata
 
-          rm -rf friendlywrt/feeds/packages/libs/libnatpmp
-          svn co https://github.com/coolsnowwolf/packages/trunk/libs/libnatpmp friendlywrt/feeds/packages/libs/libnatpmp
+          rm -rf feeds/packages/libs/libnatpmp
+          svn co https://github.com/coolsnowwolf/packages/trunk/libs/libnatpmp feeds/packages/libs/libnatpmp
           
-          rm -rf friendlywrt/feeds/packages/lang/luasec
-          svn co https://github.com/coolsnowwolf/packages/trunk/lang/luasec friendlywrt/feeds/packages/lang/luasec
+          rm -rf feeds/packages/lang/luasec
+          svn co https://github.com/coolsnowwolf/packages/trunk/lang/luasec feeds/packages/lang/luasec
 
-          sed -i '/STAMP_BUILT/d' friendlywrt/feeds/packages/utils/runc/Makefile
-          sed -i '/STAMP_BUILT/d' friendlywrt/feeds/packages/utils/containerd/Makefile
+          sed -i '/STAMP_BUILT/d' feeds/packages/utils/runc/Makefile
+          sed -i '/STAMP_BUILT/d' feeds/packages/utils/containerd/Makefile
           
-          sed -i '/upx/d' friendlywrt/package/lean/frp/Makefile
+          sed -i '/upx/d' package/lean/frp/Makefile
           
-          wget -O friendlywrt/package/kernel/kmod-sched-cake/Makefile https://raw.githubusercontent.com/coolsnowwolf/lede/master/package/kernel/kmod-sched-cake-oot/Makefile
-          wget -O friendlywrt/feeds/packages/libs/libxml2/Makefile https://raw.githubusercontent.com/coolsnowwolf/packages/master/libs/libxml2/Makefile
+          wget -O package/kernel/kmod-sched-cake/Makefile https://raw.githubusercontent.com/coolsnowwolf/lede/master/package/kernel/kmod-sched-cake-oot/Makefile
+          wget -O feeds/packages/libs/libxml2/Makefile https://raw.githubusercontent.com/coolsnowwolf/packages/master/libs/libxml2/Makefile
 
-          sed -i "/redirect_https/d" friendlywrt/package/network/services/uhttpd/files/uhttpd.config
-          sed -i '/Load Average/i\\t\t<tr><td width="33%"><%:CPU Temperature%></td><td><%=luci.sys.exec("cut -c1-2 /sys/class/thermal/thermal_zone0/temp")%><span>&#8451;</span></td></tr>' friendlywrt/feeds/luci/modules/luci-mod-admin-full/luasrc/view/admin_status/index.htm
-          sed -i 's/pcdata(boardinfo.system or "?")/"ARMv8"/' friendlywrt/feeds/luci/modules/luci-mod-admin-full/luasrc/view/admin_status/index.htm
-          sed -i 's/services/vpn/g' friendlywrt/package/feeds/luci/luci-app-openvpn/luasrc/controller/openvpn.lua
-          sed -i 's/resolv.conf.d\/resolv.conf.auto/resolv.conf.auto/g' friendlywrt/package/lean/luci-app-flowoffload/root/etc/init.d/flowoffload
+          sed -i "/redirect_https/d" package/network/services/uhttpd/files/uhttpd.config
+          sed -i '/Load Average/i\\t\t<tr><td width="33%"><%:CPU Temperature%></td><td><%=luci.sys.exec("cut -c1-2 /sys/class/thermal/thermal_zone0/temp")%><span>&#8451;</span></td></tr>' feeds/luci/modules/luci-mod-admin-full/luasrc/view/admin_status/index.htm
+          sed -i 's/pcdata(boardinfo.system or "?")/"ARMv8"/' feeds/luci/modules/luci-mod-admin-full/luasrc/view/admin_status/index.htm
+          sed -i 's/services/vpn/g' package/feeds/luci/luci-app-openvpn/luasrc/controller/openvpn.lua
+          sed -i 's/resolv.conf.d\/resolv.conf.auto/resolv.conf.auto/g' package/lean/luci-app-flowoffload/root/etc/init.d/flowoffload
           
-          sed -i '/done/imkfs.ext4 \/dev\/mmcblk0p2 && mkdir \/mnt\/mmcblk0p2 && mount \/dev\/mmcblk0p2 \/mnt\/mmcblk0p2 && mount \/dev\/mmcblk0p2 \/opt && mkdir \/opt\/docker\n' ./friendlywrt/package/base-files/files/root/setup.sh
-          sed -i '/done/i[ -f \/etc\/init.d\/dockerd ] && \/etc\/init.d\/dockerd restart\n' ./friendlywrt/package/base-files/files/root/setup.sh
-          sed -i 's/\/root/\/mnt\/mmcblk0p2/g' ./friendlywrt/package/luci-app-r2sflasher/root/usr/bin/rom_flash
+          sed -i '/done/imkfs.ext4 \/dev\/mmcblk0p2 && mkdir \/mnt\/mmcblk0p2 && mount \/dev\/mmcblk0p2 \/mnt\/mmcblk0p2 && mount \/dev\/mmcblk0p2 \/opt && mkdir \/opt\/docker\n' package/base-files/files/root/setup.sh
+          sed -i '/done/i[ -f \/etc\/init.d\/dockerd ] && \/etc\/init.d\/dockerd restart\n' package/base-files/files/root/setup.sh
+          sed -i 's/\/root/\/mnt\/mmcblk0p2/g' package/luci-app-r2sflasher/root/usr/bin/rom_flash
 
       - name: Patch Kernel
         run: |
