--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -134,6 +134,7 @@ jobs:
           sed -i '/STAMP_BUILT/d' feeds/packages/utils/containerd/Makefile
           
           sed -i '/upx/d' package/lean/frp/Makefile
+          sed -i '/upx/d' package/lean/UnblockNeteaseMusicGo/Makefile
           
           wget -O package/kernel/kmod-sched-cake/Makefile https://raw.githubusercontent.com/coolsnowwolf/lede/master/package/kernel/kmod-sched-cake-oot/Makefile
           wget -O feeds/packages/libs/libxml2/Makefile https://raw.githubusercontent.com/coolsnowwolf/packages/master/libs/libxml2/Makefile
